Refactor docker compose adding volume to RabbitMQ

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -13,3 +13,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 10
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+volumes:
+  rabbitmq_data:
