Publicar OrderCreated no RabbitMQ.

--- a/src/Orders.Api/appsettings.json
+++ b/src/Orders.Api/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "RabbitMq": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "QueueName": "orders.created"
+  }
 }
