Criação do Worker processador da fial do RabbitMQ + inicio de documetação

--- a/src/Orders.Worker/appsettings.json
+++ b/src/Orders.Worker/appsettings.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "RabbitMq": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "QueueName": "orders.created"
   }
 }
