--- a/src/Orders.Worker/Orders.Worker.csproj
+++ b/src/Orders.Worker/Orders.Worker.csproj
@@ -14,5 +14,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Orders.Application\Orders.Application.csproj" />
+    <ProjectReference Include="..\Orders.Infrastructure\Orders.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
