--- a/src/Orders.Api/appsettings.json
+++ b/src/Orders.Api/appsettings.json
@@ -13,5 +13,9 @@
     "UserName": "guest",
     "Password": "guest",
     "QueueName": "orders.created"
+  },
+
+  "ConnectionStrings": {
+    "OrdersDb": "Server=localhost,1433;Database=OrdersDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
   }
 }
