Adding MongoDB.Driver + MongoOptions + MongoDb (DI ready)

--- a/src/Orders.Api/appsettings.json
+++ b/src/Orders.Api/appsettings.json
@@ -17,5 +17,11 @@
 
   "ConnectionStrings": {
     "OrdersDb": "Server=localhost,1433;Database=OrdersDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
+  },
+
+  "Mongo": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "OrdersReadDb",
+    "OrdersCollection": "orders"
   }
 }
