--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -29,7 +29,16 @@ services:
       test: ["CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'YourStrong!Passw0rd' -Q 'SELECT 1' || exit 1"]
       interval: 10s
       timeout: 5s
-      retries: 20    
+      retries: 20
+  mongodb:
+    image: mongo:7
+    container_name: orders-mongodb
+    ports:
+      - "27017:27017"
+    volumes:
+      - orders_mongo_data:/data/db
+
 volumes:
   rabbitmq_data:
   orders_sql_data:
+  orders_mongo_data:
