--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -119,6 +119,26 @@ services:
         condition: service_healthy
       mongodb:
         condition: service_healthy
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: orders-prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    depends_on:
+      - orders-api
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: orders-grafana
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+    depends_on:
+      - prometheus
 
 volumes:
   rabbitmq_data:
